<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/thirdLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerInParent="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".ThirdActivity">

    <TextView
        android:id="@+id/title_id"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_gravity="center"
        android:text="@string/title_email_txt"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="13sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txt_subject_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/mail_subject"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="19dp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/esit_subject_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners"
        android:inputType="textEmailSubject"
        android:padding="4dp" />

    <TextView
        android:id="@+id/txt_message_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp"
        android:text="@string/mail_Message"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="19dp"
        android:textStyle="bold">

    </TextView>

    <EditText
        android:id="@+id/edit_message_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_corners"
        android:gravity="start|top"
        android:lines="6"
        android:padding="4dp" />

    <Button
        android:id="@+id/btn_send_id"
        android:layout_width="113dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_margin="14dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/send_btn_txt" />

    <ImageView
        android:id="@+id/img"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center" />


</LinearLayout>

